--- a/S2CDIO3/WebContent/Pages.html
+++ b/S2CDIO3/WebContent/Pages.html
@@ -15,11 +15,11 @@
 		<p style="font-size: 160%;">
 			<b>Logon Page</b>
 		</p>
-		<form id='tobias'>
-			Username <input type="text">
+		<form name = "myform" id='tobias' onsubmit = form_validate()>
+			Username <input type="text" name="fname">
 			<br> Password <input
-				type="password"><br> 
-				<input id='submit' type="submit"
+				type="password" name="field2"><br> 
+				<input id='submit'  type="submit"
 				value="Submit">
 		</form>
 		<img alt="IsaacsFar" src="DTUlogo.png"
@@ -38,45 +38,19 @@
 				<tr>
 					<th>BrugerID</th>
 					<th>BrugerNavn</th>
+					<th>Initialer</th>
 					<th>Rolle</th>
-					<th>Fornavn</th>
-					<th>Vej</th>
-					<th>AdresseNummer</th>
-					<th>Postnummer</th>
-					<th>By</th>
+					<th>Password</th>
+					<th>CPR</th>
 					<th></th>
 				</tr>
 				<tr>
 					<td>1</td>
 					<td>Brian</td>
+					<td>BB</td>
 					<td>Administrator</td>
-					<td>Brian Bjørn</td>
-					<td>Anker Engelundsvej</td>
-					<td>1</td>
-					<td>2800</td>
-					<td>Lyngby</td>
-					<td><button type='button' id = 'deleteUser'>Delete user</button></td>
-				</tr>
-				<tr>
-					<td>2</td>
-					<td>aa</td>
-					<td>Bruger</td>
-					<td>Anders</td>
-					<td>Paradisæblevej</td>
-					<td>13</td>
-					<td>1000</td>
-					<td>Andeby</td>
-					<td><button type='button' id = 'deleteUser'>Delete user</button></td>
-				</tr>
-				<tr>
-					<td>3</td>
-					<td>ra</td>
-					<td>Bruger</td>
-					<td>Rip</td>
-					<td>Paradisæblevej</td>
-					<td>13</td>
-					<td>1000</td>
-					<td>Andeby</td>
+					<td>ugsin78Hf</td>
+					<td>123456-7890</td>
 					<td><button type='button' id = 'deleteUser'>Delete user</button></td>
 				</tr>
 			</div>
@@ -84,8 +58,8 @@
 	</div>
 </div>
 
-<form action="/action_page.php" style="border:1px solid #ccc">
-  <div id = 'createUser' class="container">
+<form action="/action_page.php" style="border:1px solid #ccc" name ="createUser" onsubmit = create_User()>
+  <div id = 'createUser' class="container" >
     <h1>Create User</h1>
     <p>Please fill in your data to create a user</p>
     <hr>
@@ -103,14 +77,63 @@
     <input type="CPR" placeholder="Enter CPR Number" name="CPR" required>
     
     <label for="Roles"><b>Enter Roles</b></label>
-    <input type="Roles" placeholders="Enter Roles" name="Roles" required>
+    <input type="Roles" placeholder="Enter Roles" name="Roles" required>
 
-    <div class="clearfix">
+    <div class="buttons">
       <button type="button" class="cancelbtn" id='cancel'>Cancel</button>
       <button type="submit" class="signupbtn" id='confirmCreateUser'>Sign Up</button>
     </div>
   </div>
 </form>
+<script>	
+function form_validate() {
+	var h = document.forms["myform"]["fname"].value;
+	var g = document.forms["myform"]["field2"].value;
+	if (h == ""){
+		alert("Name must be filled out");
+		return false;
+	}
+	if (g == ""){
+		alert("Password must be filled out")
+		return false;
+	}
+}
+
+
+function create_User(){
+	var x = document.forms["createUser"]["username"].value;
+	if (x == "" || x == null){
+		alert("Username must be filled out");
+		return false;
+	}
+	var y = document.forms["createUser"]["psw"].value;
+	if (y ==""|| y == null){
+		alert("Password must be entered")
+		return false;
+	}
+	var z = document.forms["createUser"]["psw-repeat"].value;
+	if(z=="" || z == null;){
+		alert("Please repeat password")
+		return false;
+	}
+	var a = document.forms["createUser"]["CPR"].value;
+	if(a=="" || a == null){
+		alert("CPR must be entered correctly. XXXXXX-XXXX")
+		return false;
+	}
+	var b = document.forms["createUser"]["Roles"].value;
+	if(b=="" || b == null){
+		alert("Please type in roles")
+		return false;	
+	}
+	return true;
+}
+
+
+
+</script>
+ 
+	  
 
 </body>
 
