New html files and dynamic chance

--- a/S2CDIO3/WebContent/Pages.html
+++ b/S2CDIO3/WebContent/Pages.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<P class = "blocktext">
 <head>
 <meta charset="ISO-8859-1">
 <title>Login side</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="loginCSS.css">
 <script src=".\jquery-3.3.1.js"></script>
-<script src=".\source.js"></script>
-</head>
+<script src=".\Source.js"></script>
+</head> 
 
- 
 <body>
-<div class="container">
-	<div id='LoginContainer' class="frontpage col-md-6 col-md-offset-3 text-center">
+<div id = "mainContainer">
+
+	<div class = "container" id='LoginContainer' class="frontpage col-md-6 col-md-offset-3 text-center">
 		<p style="font-size: 160%;">
 			<b>Logon Page</b>
 		</p>
@@ -31,74 +30,9 @@
 			style="width: 200px; height: 200px; padding: 10px">
 	</div>
 
-
-
-	<div id='adminContainer' class="mainpage">
-		<p>
-			<button type='button' id = 'createNewUser'>Opret Ny Bruger</button>
-		</p>
-
-		<table id="users">
-			<div>
-				<tr>
-					<th>BrugerID</th>
-					<th>BrugerNavn</th>
-					<th>Initialer</th>
-					<th>Rolle</th>
-					<th>Password</th>
-					<th>CPR</th>
-					<th></th>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>Brian</td>
-					<td>BB</td>
-					<td>Administrator</td>
-					<td>ugsin78Hf</td>
-					<td>123456-7890</td>
-					<td><button type='button' id = 'deleteUser'>Delete user</button></td>
-				</tr>
-			</div>
-		</table>
-	</div>
 </div>
-
-<form  onsubmit = "return form_validate()" method="post" style="border:1px solid #ccc" name ="createUser">
-  <div id = 'createUser' class="container" >
-    <h1>Create User</h1>
-    <p>Please fill in your data to create a user</p>
-    <hr>
-
-    <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" id="username">
-    <div id="err_username_msg"></div>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password"  onkeyup="checkPassword()" placeholder="Enter Password" id="psw" >
-    <div id = "err_password_msg"></div>
-
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" id="psw_repeat" onkeyup="checkPassword()">
-    <div id = "err_passwordrepeat_msg"></div>
-    
-    <label for="CPR"><b>Enter CPR</b></label>
-    <input type="CPR" placeholder="Enter CPR Number" id="CPR">
-    <div id = "err_CPR_msg"></div>
-    
-    <label for="Roles"><b>Enter Roles</b></label>
-    <input type="Roles" placeholder="Enter Roles" id="Roles">
-    <div id = "err_roles_msg"></div>
-
-    <div class="buttons">
-      <button type="button" class="cancelbtn" id='cancel'>Cancel</button>
-      <button type="submit" class="signupbtn" id='confirmCreateUser'>Sign Up</button>
-    </div>
-  </div>
-</form>
-
- 
-
 </body>
+
 
 
 </html>
