hvad foregår der

--- a/S2CDIO3/WebContent/CreateUser.html
+++ b/S2CDIO3/WebContent/CreateUser.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<form  onsubmit = "return form_validate()" method="post" style="border:1px solid #ccc">
+<form  onsubmit = "return form_validate()" method="post" style="border:1px solid #ccc" id = "createUserForm">
   <div id = 'createUser' class="container" >
     <h1>Create User</h1>
     <p>Please fill in your data to create a user</p>
