--- a/S2CDIO3/WebContent/index.html
+++ b/S2CDIO3/WebContent/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="loginCSS.css">
 <script src=".\jquery-3.3.1.js"></script>
+<script type="text/javascript" src="jquery.serialize-objects.js"></script>
 <script src=".\Source.js"></script>
 </head> 
 
