--- a/S2CDIO3/WebContent/adminContainer.html
+++ b/S2CDIO3/WebContent/adminContainer.html
@@ -18,7 +18,7 @@
 
 		<table id="users">
 
-				<tr>
+				<thead>
 					<th>BrugerID</th>
 					<th>BrugerNavn</th>
 					<th>Initialer</th>
@@ -26,16 +26,10 @@
 					<th>Password</th>
 					<th>CPR</th>
 					<th></th>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>Brian</td>
-					<td>BB</td>
-					<td>Administrator</td>
-					<td>ugsin78Hf</td>
-					<td>123456-7890</td>
-					<td><button type='button' id = 'deleteUser'>Delete user</button></td>
-				</tr>
+				</thead>
+				<tbody id='userTableBody'>
+				
+				</tbody'>
 
 		</table>
 		</form>
